DEV6_Componentslist/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Branch</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Branch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>Contact_Person__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End_Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Volunteers__c</fullName>
        <inlineHelpText>The total number of volunteers whose Hours Status = Completed or Confirmed.</inlineHelpText>
        <label>Number of Volunteers</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Volunteers__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Completed_Hours__c</fullName>
        <inlineHelpText>Total number of hours that are completed.  Hours with other status values are not included.</inlineHelpText>
        <label>Volunteer Completed Hours</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Completed_Hours__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Jobs__c</fullName>
        <label>Volunteer Jobs</label>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Shifts__c</fullName>
        <label>Volunteer Shifts</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Shifts__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Website_Time_Zone__c</fullName>
        <inlineHelpText>The Time Zone to use when displaying Shift times on Sites pages.  You only need to set this if you want to override the Time Zone set on the Site Guest User profile.</inlineHelpText>
        <label>Volunteer Website Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Saigon</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dacca</fullName>
                </value>
                <value>
                    <fullName>Asia/Yekaterinburg</fullName>
                </value>
                <value>
                    <fullName>Asia/Katmandu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteers_Still_Needed__c</fullName>
        <label>Volunteers Still Needed</label>
        <summarizedField>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Number_of_Volunteers_Still_Needed__c</summarizedField>
        <summaryForeignKey>GW_Volunteers__Volunteer_Job__c.GW_Volunteers__Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Sent_in_Campaign__c</fullName>
        <label>Num Sent in Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organiser</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Organiser)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practitioner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Practitioner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Practitioner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Practitioner)</relationshipLabel>
        <relationshipName>Campaigns4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Type__c</fullName>
        <description>Regarding conducting events type</description>
        <label>Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Lightning Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sling_Meet_Date__c</fullName>
        <label>Sling Meet Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sling_Meet_Description__c</fullName>
        <description>Regarding sling meet</description>
        <label>Sling Meet Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speaker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Speaker)</relationshipLabel>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Sponsor)</relationshipLabel>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start_Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ticket_Sale_Start_Date__c</fullName>
        <description>Regarding Event tickets sale date</description>
        <label>Ticket Sale Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Venue</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Venue</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Venue</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (venue)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.EXP_REVENUE</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>Start_Date_Time__c</columns>
        <columns>End_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>GW_Volunteers__Volunteer_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>GW_Volunteers__Number_of_Volunteers__c</columns>
        <columns>GW_Volunteers__Volunteer_Completed_Hours__c</columns>
        <columns>GW_Volunteers__Volunteer_Jobs__c</columns>
        <columns>GW_Volunteers__Volunteers_Still_Needed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.GW_Volunteers__Volunteers_Campaign</value>
        </filters>
        <label>Volunteer Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events_Campaign</fullName>
        <active>true</active>
        <description>Regarding on Events</description>
        <label>Events Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>GW_Volunteers__Volunteers_Campaign</fullName>
        <active>true</active>
        <description>A campaign specifically used to track Volunteers</description>
        <label>Volunteer Campaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>Branch_Mandatory_for_Sling_Meet_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND( ISPICKVAL( Type , &apos;Sling Meet&apos;) , ISBLANK( Branch__c ) ) , true, false)</errorConditionFormula>
        <errorDisplayField>Branch__c</errorDisplayField>
        <errorMessage>Field Should be Mandatory for Sling Meet</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Practioner_Mandatory_for_Sling_Meet_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND( ISPICKVAL( Type , &apos;Sling Meet&apos;), ISBLANK( Practitioner__c ) ) , true, false)</errorConditionFormula>
        <errorDisplayField>Practitioner__c</errorDisplayField>
        <errorMessage>Field Should be Mandatory for Sling Meet</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Venue_Mandatory_for_Sling_Meet_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND(ISPICKVAL( Type , &apos;Sling Meet&apos;), ISBLANK( Venue__c ) ) , true, false)</errorConditionFormula>
        <errorDisplayField>Venue__c</errorDisplayField>
        <errorMessage>Field Should be Mandatory for Sling Meet</errorMessage>
    </validationRules>
</CustomObject>